# hassio-e-ink

./: CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  CMakePresets.json  Kconfig  prj.conf
app/conf/: debug.conf  overlay.dts  release.conf
app/include/hei/: common.hpp  display.hpp  dns.hpp  fuel_gauge.h  image_client.hpp  led.hpp  server.hpp  settings.hpp  shutdown.hpp  wifi.hpp
app/include/hei/http/: image_server_config.h  json.h  network_list.h  response.h  server.hpp  status.h  wifi_config.h
app/ld/: http-server-sections.ld
app/res/: app.py  index.html
app/res/static/: index.html
app/src/: display.cpp  dns.cpp  fuel_gauge.c  image_client.cpp  led.cpp  main.cpp  server.cpp  settings.cpp  shell.c  shutdown.cpp  wifi.cpp
app/src/http/: image_server_config.c  json.c  network_list.c  response.c  server.cpp  status.c  wifi_config.c
doc/hei/: hei.kicad_prl  hei.kicad_pro  hei.kicad_sch
drivers/: CMakeLists.txt  Kconfig
drivers/it8951/: CMakeLists.txt  Kconfig  image.pgm
drivers/it8951/include/private/it8951/: driver.h  driver.hpp  hal.hpp  init.h  util.hpp
drivers/it8951/include/public/it8951/: common.hpp  display.hpp  error.hpp  it8951.hpp
drivers/it8951/src/: display.cpp  driver.c  driver.cpp  error.cpp  hal.cpp  init.c  init.cpp  it8951.cpp  util.cpp
dts/bindings/: ite,it8951.yaml
modules/: CMakeLists.txt  Kconfig
modules/expected/: CMakeLists.txt  Kconfig
modules/zephyr-cpp/: CMakeLists.txt  Kconfig
modules/zephyr-cpp/include/public/zephyr-cpp/: error.hpp  expected.hpp  mutex.hpp
modules/zephyr-cpp/include/public/zephyr-cpp/drivers/: gpio.hpp  spi.hpp
modules/zephyr-cpp/src/: error.cpp  mutex.cpp
modules/zephyr-cpp/src/drivers/: gpio.cpp  spi.cpp
power-ic/: CMakeLists.txt  CMakePresets.json  Kconfig  README.md  prj.conf
power-ic/conf/: debug.conf  overlay.dts  release.conf
power-ic/include/power-ic/: led.hpp  power.hpp  shutdown.hpp
power-ic/src/: led.cpp  main.cpp  power.cpp  shutdown.cpp
scripts/: backtrace  footprint  hei-after-flash  hei-after-flash-sh  hei-before-flash  hei-before-flash-sh  zephyr.diff
support/image-hosting/deployment/: .gitignore  README.md  ansible.cfg  hosts.ini  playbook.yml
support/image-hosting/deployment/files/: server.dockerfile
support/image-hosting/deployment/tasks/: 01-install-linux-dependencies.yml  02-build-image.yml  03-run-container.yml
support/image-hosting/deployment/vars/: secrets.yml
support/image-hosting/heihost/: pyproject.toml
support/image-hosting/heihost/src/heihost/: __init__.py  converter.py  dummy_client.py  encoding.py  ha_screenshot.py  hosted_image.py  image_capture.py  log.py  server.py
